--- a/seqCuda/Makefile
+++ b/seqCuda/Makefile
@@ -1,5 +1,2 @@
-build_gcc:
-	g++ -o bin/seqSerial_gcc src/seqSerial.cpp
-
-build_nvcc:
-	nvcc -o bin/seqSerial_nvcc src/seqSerial.cpp
+build:
+	nvcc -o bin/seqCuda src/seqCuda.cu
