--- a/seqSerial/Makefile
+++ b/seqSerial/Makefile
@@ -1,5 +1,7 @@
-build_gcc:
+build: compile_gcc compile_nvcc
+
+compile_gcc:
 	g++ -o bin/seqSerial_gcc src/seqSerial.cpp
 
-build_nvcc:
+compile_nvcc:
 	nvcc -o bin/seqSerial_nvcc src/seqSerial.cpp
